<resources>
    <string name="app_name">ShoppingList</string>
    <string name="show_bought_items">Show Bought Items</string>
    <string name="sort_by_name">sort by name</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="purchased">Purchased</string>
    <string name="not_purchased">not Purchased</string>
    <string name="sort_by_price">sort by price</string>
    <string name="text_size">Text Size</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="mode">Mode</string>
    <string name="settings_page">SETTINGS PAGE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>
