<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvOptionsPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/settings_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvThemeOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="110dp"
        android:text="text color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swMode"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:text="@string/dark_mode"
        app:layout_constraintStart_toStartOf="@+id/tvThemeOption"
        app:layout_constraintTop_toBottomOf="@+id/tvThemeOption" />

    <RadioGroup
        android:id="@+id/rgTextSize"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvTextColor"
        app:layout_constraintTop_toBottomOf="@+id/tvTextColor">

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Red"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="76dp" />

        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blue"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="141dp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>