<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.shoppingList.ProductListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShoppingItems"
        android:layout_width="387dp"
        android:layout_height="520dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvShoppingItems" />

    <LinearLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="?attr/colorSurface"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort"
        app:layout_constraintVertical_bias="0.189">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_filter_list"
            app:tint="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/show_bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:text="@string/show_bought_items"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_completed_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort"
        android:layout_width="361dp"
        android:layout_height="51dp"
        android:layout_marginTop="68dp"
        android:background="?attr/colorSurface"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvShoppingItems">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_reorder_list"
            app:tint="?attr/colorOnSurface" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/sort_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/sort_by_name"
                app:chipBackgroundColor="?attr/colorSecondary" />
            <com.google.android.material.chip.Chip
                android:id="@+id/sort_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/sort_by_price"
                app:chipBackgroundColor="?attr/colorSecondary" />
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>